src/styles.css
:host {
  overflow: hidden;
  --mr-width: 100vw;
  --mr-height: 100vh;
  --mr-indicator-prev-color: orangered;
  --mr-indicator-next-color: green;
  --mr-bg: black;
  --mr-webtoon-padding: 0%;
}

.container {
  display: grid;
  height: var(--mr-height);
  width: var(--mr-width);
  background: var(--mr-bg)
}

.container:not(.webtoon) {
  overflow-x: scroll;
  scroll-snap-type: x mandatory;
  grid-auto-flow: column;
  grid-auto-columns: var(--mr-width);
}

.container.vertical {
  scroll-snap-type: y mandatory;
  grid-auto-flow: row;
  grid-auto-rows: var(--mr-height);
}

.page {
  contain: layout;
}

.container:not(.webtoon) .page {
  scroll-snap-align: center;
  width: var(--mr-width);
  height: var(--mr-height);
  overflow-y: scroll;
  display: flex;
  /*
 There is a problem with scrolling when this is used, this can be resolved with
 using the safe keyword but chrome and safari don't support that yet;
 so instead we are using margin for solving this and 
 justify-content: center;
*/
}

.container:not(.webtoon) mr-image {
  width: 100%;
  height: 100%;
}

.container:not(.webtoon) mr-image::part(img) {
  display: block;
  width: auto;
  height: 100%;
  margin: auto;
}

.container.double-page mr-image {
  width: auto;
}

.double-page mr-image:first-child {
  margin-inline: auto 0;
}

.double-page mr-image:last-child {
  margin-inline: 0 auto;
}

.double-page mr-image:only-child {
  margin-inline: auto;
}

/*
fit-height is the Default mode for Horizontal Reader so we just
don't add any additional css to make that work
*/
.container:not(.webtoon)[data-scale-type="fit-width"] mr-image {
  display: flex;
  align-items: center;
}

.container:not(.webtoon)[data-scale-type="fit-width"] mr-image::part(img) {
  width: 100%;
  height: auto;
}

.container:not(.webtoon)[data-scale-type="stretch"] mr-image::part(img) {
  width: 100%;
}

.container:not(.webtoon)[data-scale-type="original-size"] mr-image {
  display: flex
}

.container:not(.webtoon)[data-scale-type="original-size"] mr-image::part(img) {
  width: var(--natrual-width);
  height: var(--natrual-height);
}

/*
since fit-height is the default case we only need to handle the landscape case
*/
.container:not(.webtoon)[data-scale-type="smart-fit"] mr-image[orientation="landscape"]::part(img) {
  width: 100%;
  height: auto;
}

.container:not(.webtoon)[data-scale-type="smart-fit"] mr-image {
  display: flex;
  align-items: center;
}

.container:not(.webtoon)[data-scale-type="fit-screen"] mr-image.fit-width::part(img) {
  width: 100%;
  height: auto;
}

.container:not(.webtoon)[data-scale-type="fit-screen"] mr-image.fit-width {
  display: flex;
  align-items: center;
}

/* webtoon */

.container.webtoon {
  display: block;
  overflow-y: scroll;
}

.webtoon mr-image::part(img) {
  display: block;
  padding-inline: var(--mr-webtoon-padding);
  width: calc(100% - calc(2 * var(--mr-webtoon-padding)));
}

/* Touch Idicator styles*/
#touch-indicator {
  color: white;
  position: absolute;
  inset: 0;
  display: none;
  /* well the display is grid, but we let the javascript add that and remove that as it is needed*/
  opacity: 0.75;
  grid-template: 1fr 1fr 1fr / 1fr 1fr 1fr;
  height: var(--mr-height);
  width: var(--mr-width)
}

#touch-indicator-prev,
#touch-indicator-next {
  display: grid;
  place-content: center;
  font-size: 3rem;
  margin: 0px;
  grid-column: span 3;
}

#touch-indicator-prev {
  background: var(--mr-indicator-prev-color);
}

#touch-indicator-next {
  grid-row: 3;
  background: var(--mr-indicator-next-color);
}

#touch-indicator::before {
  content: "";
  background: var(--mr-indicator-prev-color);
  grid-row: 2;
}

#touch-indicator::after {
  content: "";
  background: var(--mr-indicator-next-color);
  grid-column: 3
}

::-webkit-scrollbar {
  width: 0px;
  height: 0px;
}

